--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lenis": "^1.3.13",
     "leva": "^0.10.0",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "three": "^0.180.0"
